// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`can have the colors changed via the options 1`] = `
Array [
  "groupCollapsed - [\\"%c action %c/simpleSetAction %c@ 08:00:00.000\\",\\"color: #000001; font-weight: lighter;\\",\\"color: inherit; font-weight: bold;\\",\\"color: gray; font-weight: lighter;\\"]",
  "log - [\\"%c args\\",\\"color: grey; font-weight: bold;\\",{\\"a\\":123,\\"b\\":{\\"c\\":\\"hi\\"}}]",
  "log - [\\"%c prev state\\",\\"color: #cc8de0; font-weight: bold;\\",{}]",
  "log - [\\"%c next state\\",\\"color: #4CAF50; font-weight: bold;\\",{}]",
  "log - [\\"%c 0.00ms elapsed\\",\\"color: grey;\\"]",
  "groupEnd - []",
  "groupCollapsed - [\\"%c action %c/asyncAction %c@ 08:00:00.000\\",\\"color: #000001; font-weight: lighter;\\",\\"color: inherit; font-weight: bold;\\",\\"color: gray; font-weight: lighter;\\"]",
  "log - [\\"%c args\\",\\"color: grey; font-weight: bold;\\",true]",
  "log - [\\"%c prev state\\",\\"color: #cc8de0; font-weight: bold;\\",{}]",
  "groupCollapsed - [\\"%c flow_spawn %c/asyncAction %c@ 08:00:00.000\\",\\"color: #000002; font-weight: lighter;\\",\\"color: inherit; font-weight: bold;\\",\\"color: gray; font-weight: lighter;\\"]",
  "log - [\\"%c args\\",\\"color: grey; font-weight: bold;\\",true]",
  "log - [\\"%c prev state\\",\\"color: #cc8de0; font-weight: bold;\\",{}]",
  "groupCollapsed - [\\"%c flow_resume %c/asyncAction %c@ 08:00:00.000\\",\\"color: #000003; font-weight: lighter;\\",\\"color: inherit; font-weight: bold;\\",\\"color: gray; font-weight: lighter;\\"]",
  "log - [\\"%c args\\",\\"color: grey; font-weight: bold;\\",null]",
  "log - [\\"%c prev state\\",\\"color: #cc8de0; font-weight: bold;\\",{}]",
  "log - [\\"%c next state\\",\\"color: #4CAF50; font-weight: bold;\\",{}]",
  "log - [\\"%c 0.00ms elapsed\\",\\"color: grey;\\"]",
  "groupEnd - []",
  "log - [\\"%c next state\\",\\"color: #4CAF50; font-weight: bold;\\",{}]",
  "log - [\\"%c 0.00ms elapsed\\",\\"color: grey;\\"]",
  "groupEnd - []",
  "log - [\\"%c next state\\",\\"color: #4CAF50; font-weight: bold;\\",{}]",
  "log - [\\"%c 0.00ms elapsed\\",\\"color: grey;\\"]",
  "groupEnd - []",
  "groupCollapsed - [\\"%c flow_resume %c/asyncAction %c@ 08:00:00.000\\",\\"color: #000003; font-weight: lighter;\\",\\"color: inherit; font-weight: bold;\\",\\"color: gray; font-weight: lighter;\\"]",
  "log - [\\"%c args\\",\\"color: grey; font-weight: bold;\\",\\"aaa\\"]",
  "log - [\\"%c prev state\\",\\"color: #cc8de0; font-weight: bold;\\",{}]",
  "log - [\\"%c next state\\",\\"color: #4CAF50; font-weight: bold;\\",{}]",
  "log - [\\"%c 0.00ms elapsed\\",\\"color: grey;\\"]",
  "groupEnd - []",
  "groupCollapsed - [\\"%c flow_resume %c/asyncAction %c@ 08:00:00.000\\",\\"color: #000003; font-weight: lighter;\\",\\"color: inherit; font-weight: bold;\\",\\"color: gray; font-weight: lighter;\\"]",
  "log - [\\"%c args\\",\\"color: grey; font-weight: bold;\\",123]",
  "log - [\\"%c prev state\\",\\"color: #cc8de0; font-weight: bold;\\",{}]",
  "log - [\\"%c next state\\",\\"color: #4CAF50; font-weight: bold;\\",{}]",
  "log - [\\"%c 0.00ms elapsed\\",\\"color: grey;\\"]",
  "groupEnd - []",
  "groupCollapsed - [\\"%c flow_return %c/asyncAction %c@ 08:00:00.000\\",\\"color: #000004; font-weight: lighter;\\",\\"color: inherit; font-weight: bold;\\",\\"color: gray; font-weight: lighter;\\"]",
  "log - [\\"%c args\\",\\"color: grey; font-weight: bold;\\",\\"foo\\"]",
  "log - [\\"%c prev state\\",\\"color: #cc8de0; font-weight: bold;\\",{}]",
  "log - [\\"%c next state\\",\\"color: #4CAF50; font-weight: bold;\\",{}]",
  "log - [\\"%c 0.00ms elapsed\\",\\"color: grey;\\"]",
  "groupEnd - []",
  "groupCollapsed - [\\"%c action %c/errorThrowingAction %c@ 08:00:00.000\\",\\"color: #000001; font-weight: lighter;\\",\\"color: inherit; font-weight: bold;\\",\\"color: gray; font-weight: lighter;\\"]",
  "log - [\\"%c args\\",\\"color: grey; font-weight: bold;\\"]",
  "log - [\\"%c prev state\\",\\"color: #cc8de0; font-weight: bold;\\",{}]",
  "groupCollapsed - [\\"%c action %c/errorThrowingAsync %c@ 08:00:00.000\\",\\"color: #000001; font-weight: lighter;\\",\\"color: inherit; font-weight: bold;\\",\\"color: gray; font-weight: lighter;\\"]",
  "log - [\\"%c args\\",\\"color: grey; font-weight: bold;\\",\\"some input\\"]",
  "log - [\\"%c prev state\\",\\"color: #cc8de0; font-weight: bold;\\",{}]",
  "groupCollapsed - [\\"%c flow_spawn %c/errorThrowingAsync %c@ 08:00:00.000\\",\\"color: #000002; font-weight: lighter;\\",\\"color: inherit; font-weight: bold;\\",\\"color: gray; font-weight: lighter;\\"]",
  "log - [\\"%c args\\",\\"color: grey; font-weight: bold;\\",\\"some input\\"]",
  "log - [\\"%c prev state\\",\\"color: #cc8de0; font-weight: bold;\\",{}]",
  "groupCollapsed - [\\"%c flow_resume %c/errorThrowingAsync %c@ 08:00:00.000\\",\\"color: #000003; font-weight: lighter;\\",\\"color: inherit; font-weight: bold;\\",\\"color: gray; font-weight: lighter;\\"]",
  "log - [\\"%c args\\",\\"color: grey; font-weight: bold;\\",null]",
  "log - [\\"%c prev state\\",\\"color: #cc8de0; font-weight: bold;\\",{}]",
  "log - [\\"%c next state\\",\\"color: #4CAF50; font-weight: bold;\\",{}]",
  "log - [\\"%c 0.00ms elapsed\\",\\"color: grey;\\"]",
  "groupEnd - []",
  "log - [\\"%c next state\\",\\"color: #4CAF50; font-weight: bold;\\",{}]",
  "log - [\\"%c 0.00ms elapsed\\",\\"color: grey;\\"]",
  "groupEnd - []",
  "log - [\\"%c next state\\",\\"color: #4CAF50; font-weight: bold;\\",{}]",
  "log - [\\"%c 0.00ms elapsed\\",\\"color: grey;\\"]",
  "groupEnd - []",
  "groupCollapsed - [\\"%c flow_resume %c/errorThrowingAsync %c@ 08:00:00.000\\",\\"color: #000003; font-weight: lighter;\\",\\"color: inherit; font-weight: bold;\\",\\"color: gray; font-weight: lighter;\\"]",
  "log - [\\"%c args\\",\\"color: grey; font-weight: bold;\\",\\"aaa\\"]",
  "log - [\\"%c prev state\\",\\"color: #cc8de0; font-weight: bold;\\",{}]",
  "groupCollapsed - [\\"%c flow_throw %c/errorThrowingAsync %c@ 08:00:00.000\\",\\"color: #000006; font-weight: lighter;\\",\\"color: inherit; font-weight: bold;\\",\\"color: gray; font-weight: lighter;\\"]",
  "log - [\\"%c args\\",\\"color: grey; font-weight: bold;\\",{}]",
  "log - [\\"%c prev state\\",\\"color: #cc8de0; font-weight: bold;\\",{}]",
  "log - [\\"%c next state\\",\\"color: #4CAF50; font-weight: bold;\\",{}]",
  "log - [\\"%c 0.00ms elapsed\\",\\"color: grey;\\"]",
  "groupEnd - []",
]
`;

exports[`can log a tree 1`] = `
Array [
  "groupCollapsed - [\\"%c action %c/simpleSetAction %c@ 08:00:00.000\\",\\"color: #74cccf; font-weight: lighter;\\",\\"color: inherit; font-weight: bold;\\",\\"color: gray; font-weight: lighter;\\"]",
  "log - [\\"%c args\\",\\"color: grey; font-weight: bold;\\",{\\"a\\":123,\\"b\\":{\\"c\\":\\"hi\\"}}]",
  "log - [\\"%c prev state\\",\\"color: #cc8de0; font-weight: bold;\\",{}]",
  "log - [\\"%c next state\\",\\"color: #4CAF50; font-weight: bold;\\",{}]",
  "log - [\\"%c 0.00ms elapsed\\",\\"color: grey;\\"]",
  "groupEnd - []",
  "groupCollapsed - [\\"%c action %c/asyncAction %c@ 08:00:00.000\\",\\"color: #74cccf; font-weight: lighter;\\",\\"color: inherit; font-weight: bold;\\",\\"color: gray; font-weight: lighter;\\"]",
  "log - [\\"%c args\\",\\"color: grey; font-weight: bold;\\",true]",
  "log - [\\"%c prev state\\",\\"color: #cc8de0; font-weight: bold;\\",{}]",
  "groupCollapsed - [\\"%c flow_spawn %c/asyncAction %c@ 08:00:00.000\\",\\"color: #74b4cf; font-weight: lighter;\\",\\"color: inherit; font-weight: bold;\\",\\"color: gray; font-weight: lighter;\\"]",
  "log - [\\"%c args\\",\\"color: grey; font-weight: bold;\\",true]",
  "log - [\\"%c prev state\\",\\"color: #cc8de0; font-weight: bold;\\",{}]",
  "groupCollapsed - [\\"%c flow_resume %c/asyncAction %c@ 08:00:00.000\\",\\"color: #cfcf74; font-weight: lighter;\\",\\"color: inherit; font-weight: bold;\\",\\"color: gray; font-weight: lighter;\\"]",
  "log - [\\"%c args\\",\\"color: grey; font-weight: bold;\\",null]",
  "log - [\\"%c prev state\\",\\"color: #cc8de0; font-weight: bold;\\",{}]",
  "log - [\\"%c next state\\",\\"color: #4CAF50; font-weight: bold;\\",{}]",
  "log - [\\"%c 0.00ms elapsed\\",\\"color: grey;\\"]",
  "groupEnd - []",
  "log - [\\"%c next state\\",\\"color: #4CAF50; font-weight: bold;\\",{}]",
  "log - [\\"%c 0.00ms elapsed\\",\\"color: grey;\\"]",
  "groupEnd - []",
  "log - [\\"%c next state\\",\\"color: #4CAF50; font-weight: bold;\\",{}]",
  "log - [\\"%c 0.00ms elapsed\\",\\"color: grey;\\"]",
  "groupEnd - []",
  "groupCollapsed - [\\"%c flow_resume %c/asyncAction %c@ 08:00:00.000\\",\\"color: #cfcf74; font-weight: lighter;\\",\\"color: inherit; font-weight: bold;\\",\\"color: gray; font-weight: lighter;\\"]",
  "log - [\\"%c args\\",\\"color: grey; font-weight: bold;\\",\\"aaa\\"]",
  "log - [\\"%c prev state\\",\\"color: #cc8de0; font-weight: bold;\\",{}]",
  "log - [\\"%c next state\\",\\"color: #4CAF50; font-weight: bold;\\",{}]",
  "log - [\\"%c 0.00ms elapsed\\",\\"color: grey;\\"]",
  "groupEnd - []",
  "groupCollapsed - [\\"%c flow_resume %c/asyncAction %c@ 08:00:00.000\\",\\"color: #cfcf74; font-weight: lighter;\\",\\"color: inherit; font-weight: bold;\\",\\"color: gray; font-weight: lighter;\\"]",
  "log - [\\"%c args\\",\\"color: grey; font-weight: bold;\\",123]",
  "log - [\\"%c prev state\\",\\"color: #cc8de0; font-weight: bold;\\",{}]",
  "log - [\\"%c next state\\",\\"color: #4CAF50; font-weight: bold;\\",{}]",
  "log - [\\"%c 0.00ms elapsed\\",\\"color: grey;\\"]",
  "groupEnd - []",
  "groupCollapsed - [\\"%c flow_return %c/asyncAction %c@ 08:00:00.000\\",\\"color: #74cf8b; font-weight: lighter;\\",\\"color: inherit; font-weight: bold;\\",\\"color: gray; font-weight: lighter;\\"]",
  "log - [\\"%c args\\",\\"color: grey; font-weight: bold;\\",\\"foo\\"]",
  "log - [\\"%c prev state\\",\\"color: #cc8de0; font-weight: bold;\\",{}]",
  "log - [\\"%c next state\\",\\"color: #4CAF50; font-weight: bold;\\",{}]",
  "log - [\\"%c 0.00ms elapsed\\",\\"color: grey;\\"]",
  "groupEnd - []",
  "groupCollapsed - [\\"%c action %c/errorThrowingAction %c@ 08:00:00.000\\",\\"color: #74cccf; font-weight: lighter;\\",\\"color: inherit; font-weight: bold;\\",\\"color: gray; font-weight: lighter;\\"]",
  "log - [\\"%c args\\",\\"color: grey; font-weight: bold;\\"]",
  "log - [\\"%c prev state\\",\\"color: #cc8de0; font-weight: bold;\\",{}]",
  "groupCollapsed - [\\"%c action %c/errorThrowingAsync %c@ 08:00:00.000\\",\\"color: #74cccf; font-weight: lighter;\\",\\"color: inherit; font-weight: bold;\\",\\"color: gray; font-weight: lighter;\\"]",
  "log - [\\"%c args\\",\\"color: grey; font-weight: bold;\\",\\"some input\\"]",
  "log - [\\"%c prev state\\",\\"color: #cc8de0; font-weight: bold;\\",{}]",
  "groupCollapsed - [\\"%c flow_spawn %c/errorThrowingAsync %c@ 08:00:00.000\\",\\"color: #74b4cf; font-weight: lighter;\\",\\"color: inherit; font-weight: bold;\\",\\"color: gray; font-weight: lighter;\\"]",
  "log - [\\"%c args\\",\\"color: grey; font-weight: bold;\\",\\"some input\\"]",
  "log - [\\"%c prev state\\",\\"color: #cc8de0; font-weight: bold;\\",{}]",
  "groupCollapsed - [\\"%c flow_resume %c/errorThrowingAsync %c@ 08:00:00.000\\",\\"color: #cfcf74; font-weight: lighter;\\",\\"color: inherit; font-weight: bold;\\",\\"color: gray; font-weight: lighter;\\"]",
  "log - [\\"%c args\\",\\"color: grey; font-weight: bold;\\",null]",
  "log - [\\"%c prev state\\",\\"color: #cc8de0; font-weight: bold;\\",{}]",
  "log - [\\"%c next state\\",\\"color: #4CAF50; font-weight: bold;\\",{}]",
  "log - [\\"%c 0.00ms elapsed\\",\\"color: grey;\\"]",
  "groupEnd - []",
  "log - [\\"%c next state\\",\\"color: #4CAF50; font-weight: bold;\\",{}]",
  "log - [\\"%c 0.00ms elapsed\\",\\"color: grey;\\"]",
  "groupEnd - []",
  "log - [\\"%c next state\\",\\"color: #4CAF50; font-weight: bold;\\",{}]",
  "log - [\\"%c 0.00ms elapsed\\",\\"color: grey;\\"]",
  "groupEnd - []",
  "groupCollapsed - [\\"%c flow_resume %c/errorThrowingAsync %c@ 08:00:00.000\\",\\"color: #cfcf74; font-weight: lighter;\\",\\"color: inherit; font-weight: bold;\\",\\"color: gray; font-weight: lighter;\\"]",
  "log - [\\"%c args\\",\\"color: grey; font-weight: bold;\\",\\"aaa\\"]",
  "log - [\\"%c prev state\\",\\"color: #cc8de0; font-weight: bold;\\",{}]",
  "groupCollapsed - [\\"%c flow_throw %c/errorThrowingAsync %c@ 08:00:00.000\\",\\"color: #c91c1c; font-weight: lighter;\\",\\"color: inherit; font-weight: bold;\\",\\"color: gray; font-weight: lighter;\\"]",
  "log - [\\"%c args\\",\\"color: grey; font-weight: bold;\\",{}]",
  "log - [\\"%c prev state\\",\\"color: #cc8de0; font-weight: bold;\\",{}]",
  "log - [\\"%c next state\\",\\"color: #4CAF50; font-weight: bold;\\",{}]",
  "log - [\\"%c 0.00ms elapsed\\",\\"color: grey;\\"]",
  "groupEnd - []",
]
`;

exports[`can output the elapsed time 1`] = `
Array [
  "groupCollapsed - [\\"%c action %c/simpleSetAction %c@ 10:46:40.000\\",\\"color: #74cccf; font-weight: lighter;\\",\\"color: inherit; font-weight: bold;\\",\\"color: gray; font-weight: lighter;\\"]",
  "log - [\\"%c args\\",\\"color: grey; font-weight: bold;\\",{\\"a\\":123,\\"b\\":{\\"c\\":\\"hi\\"}}]",
  "log - [\\"%c prev state\\",\\"color: #cc8de0; font-weight: bold;\\",{}]",
  "log - [\\"%c next state\\",\\"color: #4CAF50; font-weight: bold;\\",{}]",
  "log - [\\"%c 10000.00ms elapsed\\",\\"color: grey;\\"]",
  "groupEnd - []",
]
`;

exports[`can the logging group collapsed'ness changed via the options 1`] = `
Array [
  "group - [\\"%c action %c/simpleSetAction %c@ 08:00:00.000\\",\\"color: #74cccf; font-weight: lighter;\\",\\"color: inherit; font-weight: bold;\\",\\"color: gray; font-weight: lighter;\\"]",
  "log - [\\"%c args\\",\\"color: grey; font-weight: bold;\\",{\\"a\\":123,\\"b\\":{\\"c\\":\\"hi\\"}}]",
  "log - [\\"%c prev state\\",\\"color: #cc8de0; font-weight: bold;\\",{}]",
  "log - [\\"%c next state\\",\\"color: #4CAF50; font-weight: bold;\\",{}]",
  "log - [\\"%c 0.00ms elapsed\\",\\"color: grey;\\"]",
  "groupEnd - []",
  "groupCollapsed - [\\"%c action %c/simpleSetAction %c@ 08:00:00.000\\",\\"color: #74cccf; font-weight: lighter;\\",\\"color: inherit; font-weight: bold;\\",\\"color: gray; font-weight: lighter;\\"]",
  "log - [\\"%c args\\",\\"color: grey; font-weight: bold;\\",{\\"a\\":456,\\"b\\":{\\"c\\":\\"hi\\"}}]",
  "log - [\\"%c prev state\\",\\"color: #cc8de0; font-weight: bold;\\",{}]",
  "log - [\\"%c next state\\",\\"color: #4CAF50; font-weight: bold;\\",{}]",
  "log - [\\"%c 0.00ms elapsed\\",\\"color: grey;\\"]",
  "groupEnd - []",
]
`;
